# SyntheticPairEngine

./: CMakeLists.txt  README.md  build.bat
include/: arbitrage_engine.hpp  data_feed.hpp  exchange_websocket.hpp  exposure_management.hpp  market_data.hpp  mispricing_detector.hpp  pricing_models.hpp
src/: arbitrage_engine.cpp  main.cpp  mispricing_detector.cpp  pricing_models.cpp
